Fixed Chrome Alignment bug.

--- a/css/css.css
+++ b/css/css.css
@@ -59,7 +59,7 @@ a {
 	list-style: none;
 	text-align: center;
 	padding: 0;
-	margin-right:12%;
+
 	margin-top: 25px;
 	
 }
